# 02180-Heureka

./: CMakeLists.txt  LICENSE
Heureka/: Heureka.sdf  Heureka.sln
Heureka/Heureka/: Arc.h  BoostWinSetup.txt  Clause.cpp  Clause.h  Comparator.h  Copenhagen.txt  CopenhagenDirections.txt  CopenhagenDirections2.txt  Driver.cpp  Driver.h  Heureka.vcxproj  Heureka.vcxproj.filters  Heureka_copenhagen.txt  INode.h  InferenceDriver.cpp  InferenceDriver.h  InferenceReader.cpp  InferenceReader.h  KnowledgeBase.cpp  KnowledgeBase.h  KnowledgeBase.txt  Literal.cpp  Literal.h  Node.h  Pathfinding.cpp  Pathfinding.h  PathfindingDriver.cpp  PathfindingDriver.h  Point.cpp  Point.h  State.cpp  State.h  main.cpp  test.txt
Heureka/Heureka/Debug/: Pathfinding.cpp  Pathfinding.h
